Ensure testimonials are displayed without horizontal scrolling and show full content by default.

--- a/src/components/home/Testimonials.scss
+++ b/src/components/home/Testimonials.scss
@@ -6,7 +6,7 @@
   color: $color-primary;
   font-family: $font-primary;
   width: 95%;
-  margin: 0 auto;
+  margin: 2rem auto;
   &__title {
     margin-bottom: 1rem;
     font-family: $font-secondary;
